--- a/src/style.css
+++ b/src/style.css
@@ -103,6 +103,7 @@
   border-width: var(--puzzle--border-width);
   border-style: solid;
   border-color: var(--puzzle--border-color);
+  box-shadow: 1px 1px var(--puzzle--border-color);
 }
 
 .logic-puzzle-input-grid__cell {
